feat: remove page result and update
