# src/main/openapi/search-config-openapi-v1.yaml
@@ -160,7 +160,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SearchConfigPageResult'
+                $ref: '#/components/schemas/GetSearchTemplatesResponse'
         "400":
           description: Bad request
           content:
@@ -324,36 +324,6 @@ components:
           type: string
         page:
           type: string
-        pageNumber:
-          format: int32
-          description: The number of page.
-          default: 0
-          type: integer
-        pageSize:
-          format: int32
-          description: The size of page
-          default: 100
-          type: integer
-    SearchConfigPageResult:
-      description: PageResult  for Search configs
-      type: object
-      properties:
-        totalElements:
-          format: int64
-          type: integer
-        number:
-          format: int32
-          type: integer
-        size:
-          format: int32
-          type: integer
-        totalPages:
-          format: int64
-          type: integer
-        stream:
-          type: array
-          items:
-            $ref: '#/components/schemas/SearchConfig'
     ProblemDetailResponse:
       type: object
       properties:
